--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.27.1",
-        "axios": "^0.19",
+        "axios": "^1.9.0",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.7.16"
+        "vue-template-compiler": "^0.1.0"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@mantine/core": "^8.0.1",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "sweetalert2": "^11.6.13"
     }
 }
